--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Lens by HTML5 UP</title>
+		<title>Winterstarre</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,84 +19,158 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Lens</h1>
-						<p>Just another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
+						<h1>Winterstarre</h1>
+						<p>Watercolors by Anca Sinpalean</p>
 					</header>
 
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Diam tempus accumsan</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<a class="thumbnail" href="images/fulls/01.webp" data-position="center center"><img src="images/thumbs/01.webp" alt="" /></a>
+							<h2>Winterstarre</h2>
+							<p>56 x 42 cm</p>
+							<p>Winterstarre (Hibernation) is an exhibition of watercolors by artist and curator Anca Sinpalean at Artfoyer in Fällanden, Switzerland. Although the paintings have subjects drawn from nature and animal life, the title is a play upon the current state of mind in which us humans find ourselves and aims to offer some joy to visitors and passers by.
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>Vivamus convallis libero</h2>
-							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
+							<a class="thumbnail" href="images/fulls/02.webp"><img src="images/thumbs/02.webp" alt="" /></a>
+							<p class="inverse">Artworks shown inside as well as in the windows of Artfoyer change on a rotational basis. They address the passers by on their way to the nearby lake of Greifensee in a visual language that is realistic, accessible and yet subtle.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>Nec accumsan enim felis</h2>
-							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
+							<a class="thumbnail" href="images/fulls/03.webp" data-position="center center"><img src="images/thumbs/03.webp" alt="" /></a>
+							<h2>Field Trip</h2>
+							<p>65 x 50 cm</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>Donec maximus nisi eget</h2>
-							<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
+							<a class="thumbnail" href="images/fulls/04.webp"><img src="images/thumbs/04.webp" alt="" /></a>
+							<h2>The Search</h2>
+							<p>65 x 50 cm</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>Nullam vitae nunc vulputate</h2>
-							<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
+							<a class="thumbnail" href="images/fulls/05.webp"><img src="images/thumbs/05.webp" alt="" /></a>
+							<h2>Orange Birds I</h2>
+							<p>25 x 25 cm</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Phasellus magna faucibus</h2>
-							<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
+							<a class="thumbnail" href="images/fulls/06.webp"><img src="images/thumbs/06.webp" alt="" /></a>
+							<h2>Orange Birds II</h2>
+							<p>25 x 25 cm</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Proin quis mauris</h2>
-							<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
+							<a class="thumbnail" href="images/fulls/07.webp"><img src="images/thumbs/07.webp" alt="" /></a>
+							<h2>Blue Birds I</h2>
+							<p>50 x 65 cm</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>Gravida quis varius enim</h2>
-							<p>Nunc egestas congue lorem. Nullam dictum placerat ex sapien tortor mattis.</p>
+							<a class="thumbnail" href="images/fulls/08.webp"><img src="images/thumbs/08.webp" alt="" /></a>
+							<h2>Freezing Birds</h2>
+							<p>26.5 x 38.5 cm</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>Morbi eget vitae adipiscing</h2>
-							<p>In quis vulputate dui. Maecenas metus elit, dictum praesent lacinia lacus.</p>
+							<a class="thumbnail" href="images/fulls/09.webp"><img src="images/thumbs/09.webp" alt="" /></a>
+							<h2>River I</h2>
+							<p>32 x 24 cm</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>Habitant tristique senectus</h2>
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus ac tincidunt dolor.</p>
+							<a class="thumbnail" href="images/fulls/10.webp"><img src="images/thumbs/10.webp" alt="" /></a>
+							<h2>Green Dreams</h2>
+							<p>Tryptich, 42 x 56 cm each</p>
+						</article>
+						<!--
+						<article>
+							<a class="thumbnail" href="images/fulls/13.webp"><img src="images/thumbs/13.webp" alt="" /></a>
+							<h2>Orange Birds III</h2>
+							<p>25 x 25 cm</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg" alt="" /></a>
-							<h2>Pharetra ex non faucibus</h2>
-							<p>Ut sed magna euismod leo laoreet congue. Fusce congue enim ultricies.</p>
+							<a class="thumbnail" href="images/fulls/14.webp"><img src="images/thumbs/14.webp" alt="" /></a>
+							<h2>The Hunt</h2>
+							<p>24 x 32 cm</p>
+						</article>
+						-->
+						<article>
+							<a class="thumbnail" href="images/fulls/15.webp"><img src="images/thumbs/15.webp" alt="" /></a>
+							<h2>Lonely</h2>
+							<p>24 x 32 cm</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Mattis lorem sodales</h2>
-							<p>Feugiat auctor leo massa, nec vestibulum nisl erat faucibus, rutrum nulla.</p>
+							<a class="thumbnail" href="images/fulls/16.webp"><img src="images/thumbs/16.webp" alt="" /></a>
+							<h2>All That White</h2>
+							<p>28 x 24 cm</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/17.webp"><img src="images/thumbs/17.webp" alt="" /></a>
+							<h2>Winterstarre Postcard</h2>
+							<p>26 x 21 cm</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/18.webp"><img src="images/thumbs/18.webp" alt="" /></a>
+							<h2>Gray Birds</h2>
+							<p>32 x 24 cm</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/19.webp"><img src="images/thumbs/19.webp" alt="" /></a>
+							<h2>Pigeon</h2>
+							<p>32 x 24 cm</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/20.webp"><img src="images/thumbs/20.webp" alt="" /></a>
+							<h2>Suburban Poetry</h2>
+							<p>32 x 24 cm</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/21.webp"><img src="images/thumbs/21.webp" alt="" /></a>
+							<h2>River II</h2>
+							<p>56 x 42 cm</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/22.webp"><img src="images/thumbs/22.webp" alt="" /></a>
+							<h2>Tree I</h2>
+							<p>30 x 40 cm</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/11.webp"><img src="images/thumbs/11.webp" alt="" /></a>
+							<h2>Birds</h2>
+							<p>26.5 x 38.5 cm</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/12.webp"><img src="images/thumbs/12.webp" alt="" /></a>
+							<h2>Blue Birds II</h2>
+							<p>50 x 65 cm</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/23.webp"><img src="images/thumbs/23.webp" alt="" /></a>
+							<h2>Eaves</h2>
+							<p>30 x 40 cm</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/24.webp"><img src="images/thumbs/24.webp" alt="" /></a>
+							<h2>Tree II</h2>
+							<p>30 x 40 cm</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/25.webp"><img src="images/thumbs/25.webp" alt="" /></a>
+							<h2>Tree III</h2>
+							<p>24 x 32 cm</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/26.webp"><img src="images/thumbs/26.webp" alt="" /></a>
+							<h2>Thanks for Watching</h2>
+							<p>48 x 36 cm (for Milazzo Optik)</p>
 						</article>
 					</section>
 
 				<!-- Footer -->
 					<footer id="footer">
+						<ul class="icons">
+							<!--
+							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							-->
+							<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfh5yC0hMP_MFMi5UIVCt6oElc7UQ39poqVt6UFucgBeurZlg/viewform?usp=sf_link" class="icon fa-envelope" title="Contact"><span class="label">Contact</span></a></li>
+						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>.</li>
+							<li>&copy; Anca Sinpalean.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>.</li>
 						</ul>
 					</footer>
 
