Update index blurb.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<a class="thumbnail" href="images/fulls/01.webp" data-position="center center"><img src="images/thumbs/01.webp" alt="" /></a>
 							<h2>Winterstarre</h2>
 							<p>56 x 42 cm</p>
-							<p>Winterstarre (Hibernation) is an exhibition of watercolors by artist and curator Anca Sinpalean at Artfoyer in Fällanden, Switzerland. Although the paintings have subjects drawn from nature and animal life, the title is a play upon the current state of mind in which us humans find ourselves and aims to offer some joy to visitors and passers by.
+							<p>Winterstarre (Hibernation) is an exhibition of watercolors by artist and curator Anca Sinpalean at Artfoyer in Fällanden, Switzerland. Although the paintings have subjects drawn from nature and animal life, the title is a play upon a common state of mind in which us humans presently find ourselves and aims to offer some joy to visitors and passers by.
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/02.webp"><img src="images/thumbs/02.webp" alt="" /></a>
